// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TaskStatusComponent Snapshot matches snapshot with "todo" status 1`] = `
<div>
  <div
    class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap h-7 text-small text-default-foreground w-[100px] px-2 rounded-[20px] bg-blue-500/10 dark:bg-purple-600/10"
  >
    <span
      class="flex-1 font-normal px-2 text-center text-md capitalize text-blue-500 dark:text-purple-600"
    >
      todo
    </span>
  </div>
</div>
`;

exports[`TaskStatusComponent Snapshot matches snapshot with default styles for invalid status 1`] = `
<div>
  <div
    class="relative max-w-fit min-w-min inline-flex items-center justify-between box-border whitespace-nowrap h-7 text-small text-default-foreground w-[100px] px-2 rounded-[20px] bg-gray-300"
  >
    <span
      class="flex-1 font-normal px-2 text-center text-md capitalize text-gray-700"
    >
      invalidStatus
    </span>
  </div>
</div>
`;
